tests/invalid_scir_h/unsupported_select.scirh
module invalid.select
fn bad -> int !
  select
    recv channel as value
      return value
